--- a/Recursive Viewer/Recursive Viewer.vcxproj.filters
+++ b/Recursive Viewer/Recursive Viewer.vcxproj.filters
@@ -15,6 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Desktop\README.md" />
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
