--- a/Recursive Viewer/Recursive Viewer.vcxproj.filters
+++ b/Recursive Viewer/Recursive Viewer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="FileLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DMainWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DefaultExtensionTypes.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DMainWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
